# EngineSDK

./: .gitignore  Makefile  pyproject.toml  test.env
enginesdk/: api.py  config.py
enginesdk/tests/v1/: factories.py  test_api.py
enginesdk/v1/routers/: docs.py  health.py  info.py  predict.py  schemas.py
enginesdk/v1/schemas/: secrets.py  settings.py  url.py
enginesdk/v1/services/: auth.py  engineroom.py  predict.py  uploader.py
